search by tags method changed to every(), overflow on aboutme repaired

--- a/src/components/AboutMe/MainLabel/MainLabel.scss
+++ b/src/components/AboutMe/MainLabel/MainLabel.scss
@@ -2,7 +2,6 @@
 @import '../../../assets/scss/animations';
 
 .mainLabel {
-    width: 100%;
     margin-top: 6rem;
     margin-left: 4rem;
 
